test(daily-record): update unit, security, and integration tests for daily records
- Updated MockMvc test routes to use POST `/api/daily-records/patient/{patientId}/ensure`.
- Fixed HTTP status assertions to expect 200 OK on record retrieval and 201 Created on portion creation.
- Aligned unit, mapper, and security test suites with the updated DailyRecord service logic and DTOs.